update new style

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 #----------------------------------------------------------------------------
 
 # bundler state
+Gemfile
+Gemfile.lock
 /.bundle
 /vendor/bundle/
 /vendor/ruby/
